Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87783

Qt Creator Help shows warnings instead of documentation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.0.0 RC
    • 6.0.0 Beta1
    • Tools: Assistant
    • None
    • Qt 6.0.0 beta1 from online installer
      mingw81_64
    • Windows
    • 633505bc5490d174ac3985fb5e195b4e742b987b (qt/qttools/dev)

    Description

      1. Start Assistant, or Qt Creator
        It will show a bunch of warnings in the form:
        "Could not register file: 'C:/Qt-10.22/Docs/Qt-6.0.0/qtxml.qch': Cannot register namespace "org.qt-project.qtxml.600".
      2. Click "OK" for all these warnings.
        Assistant/Qt Creator will will not show documentation.

      The files seems to be in place.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-87783
          # Subject Branch Project Status CR V

          Activity

            People

              jkobus Jarek Kobus
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes