Assistant: Fix missing documentation

Move a call to initFileSystemWatchers() after
setting the readonly mode, since initFileSystemWatchers()
triggers setup with unwanted mode.
Broken by accident in 15d7a30d41b423846fc74d9dd252c1e2a84769e2

Fixes: QTBUG-87783
Change-Id: I6d79fea010af28c2a839ef4aa6f0f802669ea7bd
Reviewed-by: hjk <hjk@qt.io>